--- a/app/dockerfile
+++ b/app/dockerfile
@@ -3,7 +3,7 @@ FROM python:3.9-slim
 RUN apt-get update && apt-get install -y python3-pip
 
 RUN useradd --create-home myuser
-WORKDIR '/home/myuser'
+WORKDIR /app
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 
